# netapp-dataops-toolkit

./: .env  .gitignore  Examples.ipynb  README.md  kubernetes.md  mcp_servers.md  ntap_dsutil.py  troubleshooting.md
netapp_dataops_k8s/: .gitignore  DESCRIPTION.md  README.md  setup.cfg
netapp_dataops_k8s/Examples/: job-netapp-dataops.yaml  job-ntap-dsutil.yaml  service-account-netapp-dataops.yaml
netapp_dataops_k8s/Examples/Airflow/: README.md  ai-training-run.py  clone-volume.py  cluster-role-netapp-dataops.yaml  replicate-data-cloud-sync.py  replicate-data-snapmirror.py  role-binding-airflow-netapp-dataops.yaml
netapp_dataops_k8s/Examples/Kubeflow/: README.md
netapp_dataops_k8s/Examples/Kubeflow/Notebooks/: NetApp-Example.ipynb  README.md  role-binding-kubeflow-netapp-dataops.yaml
netapp_dataops_k8s/Examples/Kubeflow/Pipelines/: README.md  ai-training-run.py  clone-volume.py  delete-snapshot.py  delete-volume.py  replicate-data-cloud-sync.py  replicate-data-snapmirror.py  secret-ontap-admin-account.yaml
netapp_dataops_k8s/docs/: api.md  data_movement.md  inference_server_management.md  mcp_server_k8s.md  volume_management.md  workspace_management.md
netapp_dataops_k8s/netapp_dataops/: k8s.py  logging_utils.py  netapp_dataops_k8s_cli.py  netapp_dataops_k8s_mcp.py
netapp_dataops_k8s/netapp_dataops/k8s/: __init__.py
netapp_dataops_k8s/netapp_dataops/k8s/data_movers/: __init__.py  s3.py
netapp_dataops_k8s/test_scripts/: test_s3_cli.sh  test_triton.sh
netapp_dataops_traditional/: .gitignore  DESCRIPTION.md  Examples.ipynb  README.md  setup.cfg  setup.py  test_configuration.py  test_create_volume.py  test_dataset_features.py  test_dataset_manager_e2e.py  test_mcp_imports.py  troubleshooting.md
netapp_dataops_traditional/Examples/: README.md  dotk_keras_demo.ipynb  dotk_mlflow_keras_demo.ipynb  notebookInstance-FSXVolume-stack.yaml
netapp_dataops_traditional/docs/: README.md  anf_mcp_server_readme.md  anf_readme.md  dataset_manager_jupyterlab_k8s.md  dataset_manager_readme.md  gcnv_mcp_server_readme.md  gcnv_readme.md  mcp_server.md  ontap_least_privilege_role.md  ontap_readme.md
netapp_dataops_traditional/examples/: README.md  notebookInstance-FSXVolume-stack.yaml
netapp_dataops_traditional/examples/jupyterlab-k8s/: .gitignore  Dockerfile  README.md  config.json.example  netapp-dataops-start.sh
netapp_dataops_traditional/examples/jupyterlab-k8s/k8s/: dataset-mgr-root-pv.yaml  jupyterlab-access-secret.yaml  jupyterlab-deployment.yaml  netapp-dataops-ontap-cert-configmap.yaml  netapp-dataops-secret.yaml
netapp_dataops_traditional/netapp_dataops/: Dockerfile  README.md  clone_refresh.sh  clone_refresh_and_protect.sh  constants  help_text.py  logging_utils.py  netapp_dataops_cli  netapp_dataops_cli.py  netapp_dataops_gcnv_mcp.py  traditional.py  traditional.py.orig
netapp_dataops_traditional/netapp_dataops/commands/: __init__.py  base_command.py  clone_command.py  command_factory.py  config_command.py  create_command.py  delete_command.py  get_command.py  help_command.py  list_command.py  mount_command.py  prepopulate_command.py  restore_command.py  s3_command.py  sync_command.py  unmount_command.py  update_command.py  version_command.py
netapp_dataops_traditional/netapp_dataops/config/: __init__.py  dataset_manager.py  exceptions.py  manager.py  models.py  prompt_utils.py
netapp_dataops_traditional/netapp_dataops/mcp_server/: config.py  netapp_dataops_anf_mcp.py  netapp_dataops_gcnv_mcp.py  netapp_dataops_mcp.py  netapp_dataops_ontap_mcp.py
netapp_dataops_traditional/netapp_dataops/tests/anf/: README.md  test_base.py
netapp_dataops_traditional/netapp_dataops/tests/mcp/: test_anf_mcp.py
netapp_dataops_traditional/netapp_dataops/traditional/: __init__.py  cloud_sync_operations.py  exceptions.py  flexcache_operations.py  gcnv.py  list_operations.py  qtree.py  s3_operations.py  snapmirror_operations.py  snapshot_operations.py  volume_operations.py
netapp_dataops_traditional/netapp_dataops/traditional/anf/: README.md  __init__.py  anf_module_readme.md  base.py  cli_config.py  client.py  config.py  replication_management.py  snapshot_management.py  volume_management.py
netapp_dataops_traditional/netapp_dataops/traditional/cloud/: __init__.py  gcnv.py  s3_operations.py
netapp_dataops_traditional/netapp_dataops/traditional/core/: __init__.py  config.py  connection.py  utilities.py
netapp_dataops_traditional/netapp_dataops/traditional/data_movement/: __init__.py  cloud_sync_operations.py  s3_operations.py
netapp_dataops_traditional/netapp_dataops/traditional/datasets/: __init__.py  dataset.py  exceptions.py
netapp_dataops_traditional/netapp_dataops/traditional/gcnv/: README.md  __init__.py  base.py  replication_management.py  setup_gcnv_auth.py  snapshot_management.py  snapshot_operations.py  volume_management.py  volume_operations.py
netapp_dataops_traditional/tests/: README.md  anf_test_README.md  anf_tests_readme.md  gcnv_tests_readme.md
netapp_dataops_traditional/tests/anf/: test_anf_base.py  test_client.py  test_config.py  test_replication_management.py  test_snapshot_management.py  test_volume_management.py
netapp_dataops_traditional/tests/gcnv/: test_base.py  test_gcnv_volume_management.py  test_replication_management.py  test_snapshot_management.py  test_volume_management.py
netapp_dataops_traditional/tests/mcp/: test_anf_mcp.py  test_gcnv_mcp.py
netapp_dataops_traditional/tests/ontap/: test_snapmirror_issue33.py
netapp_dstk_cloud/: setup.cfg
netapp_dstk_cloud/netapp_dstk/: cloud.py  ntap_dsutil_k8s.py
netapp_dstk_k8s/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
netapp_dstk_k8s/Examples/Airflow/: clone-volume.py  replicate-data-cloud-sync.py
netapp_dstk_k8s/netapp_dataops/: netapp_dataops_k8s.py
netapp_dstk_k8s/netapp_dstk/: k8s.py  ntap_dsutil_k8s.py
netapp_dstk_traditional/: .gitignore  DESCRIPTION.md  Examples.ipynb  README.md  setup.cfg  setup.py
netapp_dstk_traditional/netapp_dataops/: netapp_dataops.py
netapp_dstk_traditional/netapp_dstk/: ntap_dsutil.py  traditional.py
(+32 files in other folders)
