[metadata]
name = netapp-dataops-k8s
version = attr: netapp_dataops.k8s.__version__
description = NetApp DataOps Toolkit for Kubernetes Environments
url = https://github.com/NetApp/netapp-data-science-toolkit/
author = Mike Oglesby
author_email = mike.oglesby@netapp.com
maintainer = NetApp
maintainer_email = ng-ai-inquiry@netapp.com
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/NetApp/netapp-data-science-toolkit/issues
    Documentation = https://github.com/NetApp/netapp-data-science-toolkit/blob/main/README.md
    Source Code = https://github.com/NetApp/netapp-data-science-toolkit/
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
scripts =
    netapp_dataops/netapp_dataops_k8s_cli.py
install_requires =
    ipython==7.28.0
    kubernetes==18.20.0
    pandas==1.3.3
    tabulate==0.8.9
    netapp-astra-toolkits==2.0
    certifi==2020.12.5
    chardet==4.0.0
    idna==2.10
    PyYAML==5.4.1
    requests==2.25.1
    termcolor==1.1.0
    urllib3==1.26.5
python_requires = >=3.6

[options.packages.find]
exclude = Examples.*
