[metadata]
name = netapp-dataops-k8s
version = attr: netapp_dataops.k8s.__version__
description = NetApp DataOps Toolkit for Kubernetes Environments
url = https://github.com/NetApp/netapp-data-science-toolkit/
author = Mike Oglesby
author_email = mike.oglesby@netapp.com
maintainer = NetApp
maintainer_email = ng-ai-inquiry@netapp.com
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11    
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    
project_urls =
    Bug Tracker = https://github.com/NetApp/netapp-data-science-toolkit/issues
    Documentation = https://github.com/NetApp/netapp-data-science-toolkit/blob/main/README.md
    Source Code = https://github.com/NetApp/netapp-data-science-toolkit/
long_description = The NetApp DataOps Toolkit for Kubernetes is a Python library that makes it simple for developers, data scientists, DevOps engineers, and data engineers to perform various data management tasks within a Kubernetes cluster. Some of the key capabilities that the toolkit provides are the ability to provision a new persistent volume or data science workspace, the ability to almost instantaneously clone a volume or workspace, the ability to almost instantaneously save off a snapshot of a volume or workspace for traceability/baselining, and the ability to move data between S3 compatible object storage and a Kubernetes persistent volume.<br><br>Refer to the documentation for a full list of available functionality.
long_description_content_type = text/markdown

[options]
packages = find_namespace:
scripts =
    netapp_dataops/netapp_dataops_k8s_cli.py
    netapp_dataops/netapp_dataops_k8s_mcp.py
install_requires =
    notebook<7.0.0
    pandas
    numpy>=1.22.0
    tabulate
    kubernetes
python_requires = >=3.8,<3.14

[options.packages.find]
exclude = Examples.*
