[metadata]
name = netapp-dataops-traditional
# Note: Using this single source version method requires setuptools 46.4.0
# to avoid issues with imports in the traditional.py module.
version = attr: netapp_dataops.traditional.__version__
description = NetApp DataOps Toolkit for Traditional Environments
url = https://github.com/NetApp/netapp-data-science-toolkit/
author = Mike Oglesby
author_email = mike.oglesby@netapp.com
maintainer = NetApp
maintainer_email = ng-ai-inquiry@netapp.com
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/NetApp/netapp-data-science-toolkit/issues
    Documentation = https://github.com/NetApp/netapp-data-science-toolkit/blob/main/README.md
    Source Code = https://github.com/NetApp/netapp-data-science-toolkit/    
long_description = The NetApp DataOps Toolkit for Traditional Environments is a Python library that makes it simple for developers, data scientists, DevOps engineers, and data engineers to perform various data management tasks, such as provisioning a new data volume, near-instantaneously cloning a data volume, and near-instantaneously snapshotting a data volume for traceability/baselining. This Python library can function as either a command line utility or a library of functions that can be imported into any Python program or Jupyter Notebook.<br><br>Refer to the documentation for a full list of available functionality.
long_description_content_type = text/markdown

[options]
packages = find_namespace:
scripts =
    netapp_dataops/netapp_dataops_cli.py
install_requires =
    netapp-ontap
    pandas
    tabulate
    numpy>=1.22.0
    requests
    boto3
    pyyaml
python_requires = >=3.8,<3.12
