[metadata]
name = netapp-dstk-cloud
version = attr: netapp_dstk.cloud.__version__
description = NetApp Data Science Toolkit For Cloud Environments
url = https://github.com/NetApp/netapp-data-science-toolkit
author = Michael Ogelsby

[options]
py_modules = netapp_dstk.cloud
install_requires =
    tabulate
python_requires = >=3.6