[metadata]
name = netapp-dstk-k8s
version = attr: netapp_dstk.k8s.__version__
description = NetApp Data Science Toolkit for Kubernetes Environments
url = https://github.com/NetApp/netapp-data-science-toolkit
author = Michael Ogelsby

[options]
py_modules = netapp_dstk.k8s
scripts =
    netapp_dstk/ntap_dsutil_k8s.py
install_requires =
    ipython
    kubernetes
    pandas
    tabulate
python_requires = >=3.6