[metadata]
name = netapp-dstk-k8s
version = attr: netapp_dstk.k8s.__version__
description = NetApp Data Science Toolkit for Kubernetes Environments
url = https://www.netapp.com/artificial-intelligence/
author = Michael Oglesby
author_email = mike.oglesby@netapp.com
maintainer = NetApp
maintainer_email = ng-netapp-oss@netapp.com
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Bug Tracker = https://github.com/NetApp/netapp-data-science-toolkit/issues
    Documentation = https://github.com/NetApp/netapp-data-science-toolkit/blob/main/README.md
    Source Code = https://github.com/NetApp/netapp-data-science-toolkit/

[options]
py_modules = netapp_dstk.k8s
scripts =
    netapp_dstk/ntap_dsutil_k8s.py
install_requires =
    ipython
    kubernetes
    pandas
    tabulate
python_requires = >=3.6