[metadata]
name = netapp-dstk-traditional
version = attr: netapp_dstk.traditional.__version__
description = NetApp Data Science Toolkit For Traditional Environments
url = https://github.com/NetApp/netapp-data-science-toolkit
author = Michael Ogelsby

[options]
py_modules = netapp_dstk.traditional
scripts =
    netapp_dstk/ntap_dsutil.py
install_requires =
    netapp-ontap
    pandas
    tabulate
    requests
    boto3
    pyyaml
python_requires = >=3.6