[metadata]
name = netapp-dstk-traditional
# Note: Using this single source version method requires setuptools 46.4.0
# to avoid issues with imports in the traditional.py module.
version = attr: netapp_dstk.traditional.__version__
description = NetApp Data Science Toolkit for Traditional Environments
url = https://github.com/NetApp/netapp-data-science-toolkit
author = Michael Oglesby

[options]
py_modules = netapp_dstk.traditional
scripts =
    netapp_dstk/ntap_dsutil.py
install_requires =
    netapp-ontap
    pandas
    tabulate
    requests
    boto3
    pyyaml
python_requires = >=3.6