[metadata]
name = netapp-dstk-traditional
# Note: Using this single source version method requires setuptools 46.4.0
# to avoid issues with imports in the traditional.py module.
version = attr: netapp_dstk.traditional.__version__
description = NetApp Data Science Toolkit for Traditional Environments
url = https://github.com/NetApp/netapp-data-science-toolkit/
author = Michael Oglesby
author_email = mike.oglesby@netapp.com
maintainer = NetApp
maintainer_email = ng-netapp-oss@netapp.com
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Bug Tracker = https://github.com/NetApp/netapp-data-science-toolkit/issues
    Documentation = https://github.com/NetApp/netapp-data-science-toolkit/blob/main/README.md
    Source Code = https://github.com/NetApp/netapp-data-science-toolkit/    
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown

[options]
py_modules = netapp_dstk.traditional
scripts =
    netapp_dstk/ntap_dsutil.py
install_requires =
    netapp-ontap
    pandas
    tabulate
    requests
    boto3
    pyyaml
python_requires = >=3.6